# hhadashboard

./: .gitattributes  .gitignore  DASHBOARD_PLAN.md  README.md  SHAREPOINT_DEEP_DIVE.md  SHAREPOINT_PLAN.md  UI_MOCKUP_v5.html  UPLOAD_PIPELINE_PLAN.md  VENTRA_REPLY_DRAFT.md  architecture.html  docs.html  hha_team_dashboard.html  index.html
.github/workflows/: build-job-images.yml  ci.yml  deploy-dev.yml  deploy-prod-code.yml  deploy-prod.yml  deploy-ventra-ingest.yml  migrate-prod.yml  seed-prod.yml
.husky/: pre-commit
hha-dashboard/: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml
hha-dashboard/api/: .env.example  alembic.ini  pyproject.toml
hha-dashboard/api/alembic/: env.py
hha-dashboard/api/alembic/versions/: 0001_initial.py  0002_entries_audit_uploads.py  0003_monthly_finance_manual.py  0004_weekly_clinical.py  0005_weekly_hr_manual.py  0006_ventra_athena_source.py  0007_audit_triggers.py  0008_census_credentials.py  0009_alerts_schema.py  0010_fk_indexes.py  0011_ventra_facts.py  0012_ingest_ops.py
hha-dashboard/api/app/: deps.py  main.py  settings.py
hha-dashboard/api/app/core/: logging.py  telemetry.py
hha-dashboard/api/app/models/: __init__.py  alerts.py  audit.py  base.py  census_credentials.py  entries.py  entries_clinical.py  entries_finance.py  entries_hr.py  entries_ventra.py  masters.py  uploads.py
hha-dashboard/api/app/routers/: alerts.py  census_portal.py  clinical.py  entries.py  finance.py  finance_ventra.py  operations.py  people.py  scorecards.py  sites.py  uploads.py
hha-dashboard/api/app/schemas/: alerts.py  census_portal.py  clinical.py  entries.py  finance.py  monthly_finance.py  operations.py  people.py  scorecards.py  sites.py  uploads.py  ventra_facts.py  weekly_clinical.py  weekly_hr.py
hha-dashboard/api/app/services/: alert_engine.py  audit.py  blob.py  census_auth.py  comp.py  email.py  entra_jwt.py  entries_history.py  fake_data.py  pdf_extract.py
hha-dashboard/api/app/services/email_templates/: alert_digest.html.j2  cred_scan.html.j2  ventra_failure.html.j2  ventra_incident.html.j2  ventra_quarantine.html.j2  ventra_success.html.j2
hha-dashboard/api/tests/: conftest.py  test_alert_engine.py  test_alerts_model.py  test_alerts_router.py  test_audit.py  test_audit_service.py  test_audit_triggers.py  test_blob_service.py  test_census_auth_service.py  test_census_portal.py  test_clinical_read_prefers_db.py  test_comp.py  test_deps_auth_fallthrough.py  test_email_service.py  test_entra_jwt.py  test_entries_manual_models.py  test_entries_router.py  test_entries_ventra_model.py  test_entry_router_re_save.py  test_fake_data_pure.py  test_finance_read_prefers_db.py  test_health.py  test_job_alert_digest.py  test_job_census_pdf.py  test_job_cred_scan.py  test_job_pg_backup.py  test_main_hardening.py  test_masters_and_uploads_models.py  test_migrations.py  test_monthly_finance_router.py  test_operations_read_prefers_db.py  test_paycom_sync_configured.py  test_paycom_sync_stub.py  test_pdf_extract.py  test_people_read_prefers_db.py  test_router_helpers.py  test_schema_classification.py  test_schemas_owner_forms.py  test_schemas_read_path.py  test_schemas_ventra_and_uploads.py  (+23 more)
hha-dashboard/docs/: ARCHITECTURE.md  Architecture.md  DIAGRAMS.md  ENTRA_SETUP.md  EXECUTIVE_OVERVIEW.md  GLOSSARY.md  LOCAL_VERIFICATION_REPORT.md  NEXT_BUILD_PLAN.md  (+12 more)
(+234 files in other folders)
