[project]
name = "hha-dashboard-api"
version = "0.1.0"
description = "HHA Medicine Operations Dashboard - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "msal>=1.31.0",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-storage-blob>=12.23.0",
    "azure-ai-documentintelligence>=1.0.0",
    "rapidfuzz>=3.10.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "argon2-cffi>=23.1.0",
    "azure-communication-email>=1.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole test session so asyncpg connections
# (created by the module-level engine in app.deps) can be cleaned up on the
# loop they were opened on. Per-test loops cause RuntimeError: Event loop is
# closed during asyncpg connection teardown.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
# "." = api/ (for app.*), ".." = hha-dashboard/ (for jobs.*)
pythonpath = [".", ".."]
